# wsl-ci-env

./: .gitignore  CMakeLists.txt  DoClangTidy.cmake  clang-cmakeinit.cmake
coverage/: readme.md
include/: my_thread.h  my_utility.h
src/: CMakeLists.txt  my_thread.cpp  my_utility.cpp
test/: CMakeLists.txt  main.cpp  unittest_my_thread.cpp  unittest_my_utility.cpp  unittest_param.cpp
test/atcoder/: todo.md  unittest_atcoder_abc024_a.cpp
